Fixed a bug with text alignment on mobile devices.

--- a/src/css/mainPage.scss
+++ b/src/css/mainPage.scss
@@ -259,7 +259,7 @@ a {
     .abilities-container {width: 60px; height: 60px;}
     .abilities-name {display: none;}
     .champion-detail-ability {padding: 0; transform: scale(0.75);}
-    #champion-detail-ability-name-phone {font-size: 1rem; margin: 1em 0 0 0; width: fit-content; padding: 0 1em; align-items: flex-end; display: flex;}
+    #champion-detail-ability-name-phone {font-size: 1rem; margin: 1em 0 0 0; width: fit-content; padding: 0 1em; display: flex;}
     #champion-detail-ability-name-phone-container {visibility: visible};
     #champion-detail-abilities-extra-detail-container {margin: 1em 0;}
 
